# DbMetadataExporter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dev.yml  release.yml
src/: main.rs
src/app/: mod.rs  tui.rs  tui_export.rs
src/datamimic/: datamimic.rs  mod.rs
src/db/: accessors.rs  mod.rs  models.rs
src/export/: exporter.rs
src/models/: mod.rs
