[package]
name = "DBMetaExporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[package.metadata.metadata_scripts]
build = ["cargo build --release"]
run = ["cargo run --release"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls", # Or runtime-tokio-native-tls
    "postgres",
    "mysql",
    "sqlite",
    # "macros", # Optional: Useful for compile-time query checks if using sqlx::query_as!
    # "offline" # Optional: Required for sqlx prepare (compile-time checks)
]}
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
ratatui = "0.26"
crossterm = "0.27"
